# BT_CDR

./: .gitignore  BT_FES_runOnStart.sh  CMakeLists.txt  bcmencoder.cpp  bcmencoder.h  blePedals.cpp  blePedals.h  cadenceblock.cpp  cadenceblock.h  chat.cpp  chat.h  chatserver.cpp  chatserver.h  concurrentbtle.cpp  concurrentbtle.h  headers.h  main.cpp  manager.cpp  manager.h  messageTypeDefinitions.h  motor.cpp  motor.h  pidcontroller.cpp  pidcontroller.h  powerController.cpp  powerController.h  server.cpp  server.h  server.py  shared_memory.h  singletonSM.cpp  singletonSM.h  test
FilePowerControlCamilla/: AcquiredData-2023-10-11-11-14-  AcquiredData-2023-10-20-13-11-  AcquiredData-2023-10-20-13-37-  AcquiredData-2023-10-20-14-34-  AcquiredData-2023-10-20-14-37-  AcquiredData-2023-10-20-14-41-  AcquiredData-2023-10-20-17-21-  AcquiredData-2023-10-20-17-26-  AcquiredData-2023-10-20-20-37-  AcquiredData-2023-10-20-20-41-  AcquiredData-2023-10-20-20-49-  AcquiredData-2023-10-20-20-51-  AcquiredData-2023-10-20-20-54-  AcquiredData-2023-10-20-20-56-  AcquiredData-2023-10-20-20-57-  AcquiredData-2023-10-20-22-45-  AcquiredData-2023-10-20-22-48-  AcquiredData-2023-10-20-22-50-  AcquiredData-2023-10-20-22-51-  AcquiredData-2023-10-20-23-20-  AcquiredData-2023-10-20-23-21-  AcquiredData-2023-10-20-23-24-  AcquiredData-2023-10-20-23-39-  AcquiredData-2023-10-20-23-42-  AcquiredData-2023-10-20-23-43-  AcquiredData-2023-10-21-01-07-  AcquiredData-2023-10-21-01-11-  AcquiredData-2023-10-21-06-23-  AcquiredData-2023-10-24-21-05-  AcquiredData-2023-10-25-17-49-  AcquiredData-2023-10-25-18-00-  AcquiredData-2023-10-25-18-14-  AcquiredData-2023-10-25-18-39-  AcquiredData-2023-10-25-19-06-
helper/: CMakeLists.txt  main.cpp  mainWriter.cpp  shared_memory.cpp  shared_memory.h
